# assistant

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: database.py  embeddings.py  main.py  models.py  prompts.py
app/routes/: chat.py  portfolio.py
scripts/: ingest.py
